Trying vh instead of % as a way of fixing a display bug that's showing up on mobile browsers, but not on mobile browser simulators. Weird.

--- a/style.css
+++ b/style.css
@@ -149,7 +149,6 @@ body {
 
 .flex_thing > div {
   padding: 3%;
-  overflow-y: visible;
 }
 
 .flex_thing1 {
